src/tests/fixtures/field_definitions/FiledWithUnionOfMultipleTypes.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class SomeType {
  /** @gqlField */
  hello(): string | boolean {
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_definitions/FiledWithUnionOfMultipleTypes.ts:4:12 - error: Expected exactly one non-nullish type.

4   hello(): string | boolean {
             ~~~~~~

  src/tests/fixtures/field_definitions/FiledWithUnionOfMultipleTypes.ts:4:21
    4   hello(): string | boolean {
                          ~~~~~~~
    Other non-nullish type
